platform/kustomize/minio/development/statefulset_env.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  template:
    spec:
      containers:
        - name: minio
