platform/kustomize/minio/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: minio
spec:
  rules:
    - host: minio.igiari.net
      http:
        paths:
          - backend:
              serviceName: minio
              servicePort: 9000
            path: /
